--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,38 +12,38 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-15 Sun 00:12]
+#+CAPTION: Clock summary at [2017-01-15 Sun 12:01]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *80:43* |       |       | 100.0 |
+| *Total time*                                                                | *82:20* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 80:43   |       |       | 100.0 |
-| Active                                                                      |         | 80:43 |       | 100.0 |
+| Stories                                                                     | 82:20   |       |       | 100.0 |
+| Active                                                                      |         | 82:20 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:35 |   0.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:57 |   1.2 |
-| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       |  3:24 |   4.2 |
-| COMPLETED Add basic validation infrastructure                               |         |       |  8:40 |  10.7 |
+| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       |  3:24 |   4.1 |
+| COMPLETED Add basic validation infrastructure                               |         |       |  8:40 |  10.5 |
 | COMPLETED Fix borked windows build                                          |         |       |  0:26 |   0.5 |
 | COMPLETED Clean up enumerator implementation                                |         |       |  1:05 |   1.3 |
-| COMPLETED Measure validation slowdown                                       |         |       |  6:38 |   8.2 |
-| COMPLETED Parsing should support dot notation                               |         |       |  2:54 |   3.6 |
-| COMPLETED Analysis for changes required in order to support containers      |         |       |  3:15 |   4.0 |
-| COMPLETED Add support for object based container types in C#                |         |       |  5:48 |   7.2 |
+| COMPLETED Measure validation slowdown                                       |         |       |  6:38 |   8.1 |
+| COMPLETED Parsing should support dot notation                               |         |       |  2:54 |   3.5 |
+| COMPLETED Analysis for changes required in order to support containers      |         |       |  3:15 |   3.9 |
+| COMPLETED Add support for object based container types in C#                |         |       |  5:48 |   7.0 |
 | COMPLETED Understand the behaviour of helpers and assistants                |         |       |  1:13 |   1.5 |
 | CANCELLED Add support for generic parents in yarn                           |         |       |  0:35 |   0.7 |
 | COMPLETED Fix assorted windows warnings                                     |         |       |  0:19 |   0.4 |
-| COMPLETED Build dogen on windows locally                                    |         |       |  7:32 |   9.3 |
-| COMPLETED Fix borked windows build                                          |         |       |  1:54 |   2.4 |
-| COMPLETED Generate windows packages with WIX                                |         |       |  3:28 |   4.3 |
-| COMPLETED Add validation around instatitation of abstract classes           |         |       |  2:25 |   3.0 |
+| COMPLETED Build dogen on windows locally                                    |         |       |  7:32 |   9.1 |
+| COMPLETED Fix borked windows build                                          |         |       |  1:54 |   2.3 |
+| COMPLETED Generate windows packages with WIX                                |         |       |  3:28 |   4.2 |
+| COMPLETED Add validation around instatitation of abstract classes           |         |       |  2:25 |   2.9 |
 | COMPLETED Add validation to ensure enumerators do not have types            |         |       |  0:21 |   0.4 |
-| COMPLETED Add appveyor support for bintray                                  |         |       |  2:23 |   3.0 |
-| COMPLETED Add read support for upsilon models                               |         |       | 13:26 |  16.6 |
-| STARTED Create an upsilon yarn frontend                                     |         |       |  6:07 |   7.6 |
-| STARTED Add auxiliary function properties to c#                             |         |       |  1:11 |   1.5 |
-| STARTED Add internal object dumper resolution                               |         |       |  4:51 |   6.0 |
-| STARTED Add support for generic container types to C#                       |         |       |  1:16 |   1.6 |
+| COMPLETED Add appveyor support for bintray                                  |         |       |  2:23 |   2.9 |
+| COMPLETED Add read support for upsilon models                               |         |       | 13:26 |  16.3 |
+| STARTED Create an upsilon yarn frontend                                     |         |       |  7:44 |   9.4 |
+| STARTED Add auxiliary function properties to c#                             |         |       |  1:11 |   1.4 |
+| STARTED Add internal object dumper resolution                               |         |       |  4:51 |   5.9 |
+| STARTED Add support for generic container types to C#                       |         |       |  1:16 |   1.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -1001,6 +1001,8 @@ resulted in additional errors:
   appveyor.install.windows.ps1.
 
 *** STARTED Create an upsilon yarn frontend                           :story:
+    CLOCK: [2017-01-15 Sun 11:36]--[2017-01-15 Sun 12:01] =>  0:25
+    CLOCK: [2017-01-15 Sun 10:23]--[2017-01-15 Sun 11:35] =>  1:12
     CLOCK: [2017-01-14 Sat 23:40]--[2017-01-15 Sun 00:12] =>  0:32
     CLOCK: [2017-01-14 Sat 21:15]--[2017-01-14 Sat 21:36] =>  0:21
     CLOCK: [2017-01-14 Sat 17:43]--[2017-01-14 Sat 18:19] =>  0:36
@@ -1044,6 +1046,43 @@ transformation. There are however a few corner cases:
 - We've created an "extension" method that returns all extensions for
   a given file name. It wasn't very useful in the end. If needed in
   the future its under =f83e9152e=.
+
+Problems:
+
+- we assume all languaes are "outputtable". Upsilon and LAM are
+  not. Language is not even a good name for these things either.
+- the pipeline assumes that we will generate only one final model; in
+  the mapping world this is not the case. A user may wish to map a
+  given model into n "outputtable" languages. In this case we need a
+  very different workflow: read each model natively, map them to the
+  outputtable language and then perform the workflow for the
+  outputtable language, possibly loading a different set of system
+  models.
+- we have no way of telling dogen what the output language are. This
+  can be done in the diagram itself for Dia and JSON but not for
+  upsilon. We could add command line arguments for this.
+- we have no way of describing mappings. We can use meta-data for
+  Dia/JSON but not for upsilon.
+- we need an end-to-end test for the upsilon model that includes the
+  translation to c++/c# and code generation.
+
+Upsilon as a language:
+
+- originally we envisioned that upsilon would exist all the way into
+  the meta-model as an intermediate model; we'd then go through
+  mapping to convert it into an outputtable language. However, we have
+  one slight problem: upsilon allows the user to create "string
+  typedefs". This means that many primitives are user primitives (say
+  a =SequenceId= could be an =int= in disguise). With the mapping
+  approach, we need to create a large map, model specific, with all of
+  these primitives. This could be done with the help of scripting
+  (primitives have an intrinsic type that can be mapped to a language
+  type). Alternatively, we could hard-code the mapping such that
+  =yarn.upsilon= would generate a model in an outputtable
+  language. This is easier but not reusable for LAM.
+- actually we could even use tailor to generate the mapping files,
+  given that the upsilon information already has all of the required
+  information.
 
 Tasks:
 
