--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,35 +12,35 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-15 Sun 12:48]
+#+CAPTION: Clock summary at [2017-01-15 Sun 13:44]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *83:06* |       |       | 100.0 |
+| *Total time*                                                                | *84:01* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 83:06   |       |       | 100.0 |
-| Active                                                                      |         | 83:06 |       | 100.0 |
+| Stories                                                                     | 84:01   |       |       | 100.0 |
+| Active                                                                      |         | 84:01 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:35 |   0.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:57 |   1.1 |
-| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       |  3:24 |   4.1 |
-| COMPLETED Add basic validation infrastructure                               |         |       |  8:40 |  10.4 |
+| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       |  3:24 |   4.0 |
+| COMPLETED Add basic validation infrastructure                               |         |       |  8:40 |  10.3 |
 | COMPLETED Fix borked windows build                                          |         |       |  0:26 |   0.5 |
 | COMPLETED Clean up enumerator implementation                                |         |       |  1:05 |   1.3 |
-| COMPLETED Measure validation slowdown                                       |         |       |  6:38 |   8.0 |
+| COMPLETED Measure validation slowdown                                       |         |       |  6:38 |   7.9 |
 | COMPLETED Parsing should support dot notation                               |         |       |  2:54 |   3.5 |
 | COMPLETED Analysis for changes required in order to support containers      |         |       |  3:15 |   3.9 |
-| COMPLETED Add support for object based container types in C#                |         |       |  5:48 |   7.0 |
-| COMPLETED Understand the behaviour of helpers and assistants                |         |       |  1:13 |   1.5 |
+| COMPLETED Add support for object based container types in C#                |         |       |  5:48 |   6.9 |
+| COMPLETED Understand the behaviour of helpers and assistants                |         |       |  1:13 |   1.4 |
 | CANCELLED Add support for generic parents in yarn                           |         |       |  0:35 |   0.7 |
 | COMPLETED Fix assorted windows warnings                                     |         |       |  0:19 |   0.4 |
-| COMPLETED Build dogen on windows locally                                    |         |       |  7:32 |   9.1 |
+| COMPLETED Build dogen on windows locally                                    |         |       |  7:32 |   9.0 |
 | COMPLETED Fix borked windows build                                          |         |       |  1:54 |   2.3 |
-| COMPLETED Generate windows packages with WIX                                |         |       |  3:28 |   4.2 |
+| COMPLETED Generate windows packages with WIX                                |         |       |  3:28 |   4.1 |
 | COMPLETED Add validation around instatitation of abstract classes           |         |       |  2:25 |   2.9 |
 | COMPLETED Add validation to ensure enumerators do not have types            |         |       |  0:21 |   0.4 |
-| COMPLETED Add appveyor support for bintray                                  |         |       |  2:23 |   2.9 |
-| COMPLETED Add read support for upsilon models                               |         |       | 13:26 |  16.2 |
-| STARTED Create an upsilon yarn frontend                                     |         |       |  8:30 |  10.2 |
+| COMPLETED Add appveyor support for bintray                                  |         |       |  2:23 |   2.8 |
+| COMPLETED Add read support for upsilon models                               |         |       | 13:26 |  16.0 |
+| STARTED Create an upsilon yarn frontend                                     |         |       |  9:25 |  11.2 |
 | STARTED Add auxiliary function properties to c#                             |         |       |  1:11 |   1.4 |
 | STARTED Add internal object dumper resolution                               |         |       |  4:51 |   5.8 |
 | STARTED Add support for generic container types to C#                       |         |       |  1:16 |   1.5 |
@@ -1001,6 +1001,7 @@ resulted in additional errors:
   appveyor.install.windows.ps1.
 
 *** STARTED Create an upsilon yarn frontend                           :story:
+    CLOCK: [2017-01-15 Sun 12:49]--[2017-01-15 Sun 13:44] =>  0:55
     CLOCK: [2017-01-15 Sun 12:02]--[2017-01-15 Sun 12:48] =>  0:46
     CLOCK: [2017-01-15 Sun 11:36]--[2017-01-15 Sun 12:01] =>  0:5
     CLOCK: [2017-01-15 Sun 10:23]--[2017-01-15 Sun 11:35] =>  1:12
