--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,17 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-16 Mon 10:57]
+#+CAPTION: Clock summary at [2017-01-16 Mon 11:44]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *1:27* |      |      | 100.0 |
+| *Total time*                                                                | *2:13* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 1:27   |      |      | 100.0 |
-| Active                                                                      |        | 1:27 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:20 |  23.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:26 |  29.9 |
-| STARTED Create an upsilon yarn frontend                                     |        |      | 0:41 |  47.1 |
+| Stories                                                                     | 2:13   |      |      | 100.0 |
+| Active                                                                      |        | 2:13 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:20 |  15.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:26 |  19.5 |
+| STARTED Create an upsilon yarn frontend                                     |        |      | 1:27 |  65.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -80,6 +80,7 @@ For all other operative systems you need to build it from source. Source downloa
 - [[https://twitter.com/MarcoCraveiro/status/808591399855734784][Tweet]]
 
 *** STARTED Create an upsilon yarn frontend                           :story:
+    CLOCK: [2017-01-16 Mon 10:58]--[2017-01-16 Mon 11:44] =>  0:46
     CLOCK: [2017-01-16 Mon 10:16]--[2017-01-16 Mon 10:57] =>  0:41
 
 Now we can read upsilon models, we need to transform them into yarn
