--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,17 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-16 Mon 15:01]
+#+CAPTION: Clock summary at [2017-01-16 Mon 15:46]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *4:20* |      |      | 100.0 |
+| *Total time*                                                                | *5:04* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 4:20   |      |      | 100.0 |
-| Active                                                                      |        | 4:20 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:20 |   7.7 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:35 |  13.5 |
-| STARTED Create an upsilon yarn frontend                                     |        |      | 3:25 |  78.8 |
+| Stories                                                                     | 5:04   |      |      | 100.0 |
+| Active                                                                      |        | 5:04 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:20 |   6.6 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:35 |  11.5 |
+| STARTED Create an upsilon yarn frontend                                     |        |      | 4:09 |  81.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -83,6 +83,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 - [[https://twitter.com/MarcoCraveiro/status/820962437465866241][Tweet]]
 
 *** STARTED Create an upsilon yarn frontend                           :story:
+    CLOCK: [2017-01-16 Mon 15:02]--[2017-01-16 Mon 15:46] =>  0:44
     CLOCK: [2017-01-16 Mon 14:49]--[2017-01-16 Mon 15:01] =>  0:12
     CLOCK: [2017-01-16 Mon 13:45]--[2017-01-16 Mon 14:48] =>  1:03
     CLOCK: [2017-01-16 Mon 13:01]--[2017-01-16 Mon 13:44] =>  0:43
