--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,18 +13,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-16 Mon 21:56]
+#+CAPTION: Clock summary at [2017-01-17 Tue 09:23]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *7:07* |      |      | 100.0 |
+| *Total time*                                                                | *7:29* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 7:07   |      |      | 100.0 |
-| Active                                                                      |        | 7:07 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 1:32 |  21.5 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:35 |   8.2 |
-| COMPLETED Add test in knit to validate upsilon                              |        |      | 0:51 |  11.9 |
-| STARTED Create an upsilon yarn frontend                                     |        |      | 4:09 |  58.3 |
+| Stories                                                                     | 7:29   |      |      | 100.0 |
+| Active                                                                      |        | 7:29 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 1:32 |  20.5 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:35 |   7.8 |
+| COMPLETED Add test in knit to validate upsilon                              |        |      | 0:51 |  11.4 |
+| STARTED Create an upsilon yarn frontend                                     |        |      | 4:31 |  60.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -111,6 +111,7 @@ upsilon actually generated C# and C++ code. This is rather puzzling:
   format does not support it).
 
 *** STARTED Create an upsilon yarn frontend                           :story:
+    CLOCK: [2017-01-17 Tue 09:01]--[2017-01-17 Tue 09:23] =>  0:22
     CLOCK: [2017-01-16 Mon 15:02]--[2017-01-16 Mon 15:46] =>  0:44
     CLOCK: [2017-01-16 Mon 14:49]--[2017-01-16 Mon 15:01] =>  0:12
     CLOCK: [2017-01-16 Mon 13:45]--[2017-01-16 Mon 14:48] =>  1:03
