--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,18 +13,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-17 Tue 09:23]
+#+CAPTION: Clock summary at [2017-01-17 Tue 10:40]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *7:29* |      |      | 100.0 |
+| *Total time*                                                                | *8:45* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 7:29   |      |      | 100.0 |
-| Active                                                                      |        | 7:29 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 1:32 |  20.5 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:35 |   7.8 |
-| COMPLETED Add test in knit to validate upsilon                              |        |      | 0:51 |  11.4 |
-| STARTED Create an upsilon yarn frontend                                     |        |      | 4:31 |  60.4 |
+| Stories                                                                     | 8:45   |      |      | 100.0 |
+| Active                                                                      |        | 8:45 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 1:32 |  17.5 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:35 |   6.7 |
+| COMPLETED Add test in knit to validate upsilon                              |        |      | 0:51 |   9.7 |
+| STARTED Create an upsilon yarn frontend                                     |        |      | 5:47 |  66.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -111,6 +111,7 @@ upsilon actually generated C# and C++ code. This is rather puzzling:
   format does not support it).
 
 *** STARTED Create an upsilon yarn frontend                           :story:
+    CLOCK: [2017-01-17 Tue 09:24]--[2017-01-17 Tue 10:40] =>  1:16
     CLOCK: [2017-01-17 Tue 09:01]--[2017-01-17 Tue 09:23] =>  0:22
     CLOCK: [2017-01-16 Mon 15:02]--[2017-01-16 Mon 15:46] =>  0:44
     CLOCK: [2017-01-16 Mon 14:49]--[2017-01-16 Mon 15:01] =>  0:12
@@ -192,6 +193,14 @@ Tasks:
 - add new "upsilon" language which is not generatable; entire yarn
   workflow should work for upsilon, but then quilt just does nothing.
 - add tailor support so that we can convert upsilon to JSON.
+
+Other problems:
+
+- relative/absolute config paths
+- intrinsics all in lower case
+- comments at the top of XML
+- all types are coming under the main schema rather than the
+  referenced schemas.
 
 *** Bind language to kernel                                           :story:
 
