--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,18 +13,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-17 Tue 16:49]
+#+CAPTION: Clock summary at [2017-01-17 Tue 17:04]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *10:52* |       |      | 100.0 |
+| *Total time*                                                                | *11:07* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 10:52   |       |      | 100.0 |
-| Active                                                                      |         | 10:52 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:32 |  14.1 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:35 |   5.4 |
-| COMPLETED Add test in knit to validate upsilon                              |         |       | 0:51 |   7.8 |
-| STARTED Create an upsilon yarn frontend                                     |         |       | 7:54 |  72.7 |
+| Stories                                                                     | 11:07   |       |      | 100.0 |
+| Active                                                                      |         | 11:07 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:32 |  13.8 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:35 |   5.2 |
+| COMPLETED Add test in knit to validate upsilon                              |         |       | 0:51 |   7.6 |
+| STARTED Create an upsilon yarn frontend                                     |         |       | 8:09 |  73.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -111,6 +111,7 @@ upsilon actually generated C# and C++ code. This is rather puzzling:
   format does not support it).
 
 *** STARTED Create an upsilon yarn frontend                           :story:
+    CLOCK: [2017-01-17 Tue 16:49]--[2017-01-17 Tue 17:04] =>  0:15
     CLOCK: [2017-01-17 Tue 16:01]--[2017-01-17 Tue 16:48] =>  0:47
     CLOCK: [2017-01-17 Tue 10:41]--[2017-01-17 Tue 12:01] =>  1:20
     CLOCK: [2017-01-17 Tue 09:24]--[2017-01-17 Tue 10:40] =>  1:16
